# RoboticsProject_24-25

./: Doxyfile  README.md  mainpage.dox
scripts/: pull  ros2.sh
src/interfaces/localization_interfaces/: CMakeLists.txt  package.xml
src/interfaces/localization_interfaces/srv/: BlockInfoAll.srv
src/interfaces/ur5_motion_interfaces/: CMakeLists.txt  package.xml
src/interfaces/ur5_motion_interfaces/action/: GrabMove.action
src/localization/: package.xml  setup.py
src/localization/localization/: constants.py  detection_node.py  pointcloud_utils.py  pose_estimation.py
src/ur5_motion_cpp/: CMakeLists.txt  package.xml
src/ur5_motion_cpp/include/ur5_motion_cpp/: visibility_control.h
src/ur5_motion_cpp/src/: grabmove_client_test.cpp  grabmove_server.cpp
src/ur5_planning/: CMakeLists.txt  package.xml
src/ur5_planning/include/ur5_planning/: action_client_wrapper.hpp
src/ur5_planning/src/: planning_1.cpp
